archive aesthetic/spacing fix

--- a/archive/archive.css
+++ b/archive/archive.css
@@ -2,12 +2,12 @@
 	margin-top: 50px;
 }
 #column1{
-	margin-left: 175px;
+	margin-left: 250px;
 	margin-bottom: 40px;
 	float: left;
 }
 #column2{
 	float: left;
-	margin-left: 30px;
+	margin-left: 60px;
 	margin-bottom: 40px;
 }
